[gd_scene load_steps=5 format=3 uid="uid://yvs12bu1sfbd"]

[ext_resource type="Theme" uid="uid://bufh7q0gwvnc3" path="res://assets/themes/menu_theme.tres" id="1_jw6e5"]
[ext_resource type="Script" uid="uid://cxdlw2mp0j31a" path="res://scenes/game_over_screen.gd" id="2_jw6e5"]
[ext_resource type="Shader" uid="uid://l3qtar4xi0b7" path="res://assets/shaders/blur.gdshader" id="3_cyfkl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rk3l4"]
shader = ExtResource("3_cyfkl")
shader_parameter/blur_amount = 1.5
shader_parameter/tint = Color(0, 0, 0, 1)
shader_parameter/tint_strength = 0.2
shader_parameter/saturation = 0.3

[node name="GameOverScreen" type="Control"]
process_mode = 3
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_jw6e5")
script = ExtResource("2_jw6e5")

[node name="BlurColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_rk3l4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -95.0
offset_right = 76.5
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GameOverText" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
